--- a/index.html
+++ b/index.html
@@ -1391,5 +1391,10 @@
         populateSymptoms();
         changeLanguage('en');
     </script>
+<!-- Visitor Counter -->
+<div style="text-align:center;margin-top:20px;">
+  <p>👀 Total Visitors:</p>
+  <img src="https://hitwebcounter.com/counter/counter.php?page=YOUR_UNIQUE_ID&style=0006&nbdigits=5&type=page&initCount=0" title="Free Counter" alt="web counter" border="0">
+</div>
 </body>
 </html>
