--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Untitled</title>
+    <title>NutriFix - Nutritional Deficiency Checker</title>
     
 
   </head>
